# study-archive

./: .gitignore  CMakeList.txt  CMakeLists.txt  CS170_Spring_2023_Large_data__53.txt  Cargo.toml  Dockerfile  README.md  ReadMe.md  trace.txt  trace_back.txt  trace_forw.txt  trace_p2.txt
atomic/: ReadMe.md
atomic-queue/: Cargo.toml
cl_project/: alarm.cpp  alarm.h  alarm_sch.cpp  alarm_sch.h  cl_project.ino  display.cpp  display.h  dsclock.cpp  dsclock.h  glue.cpp  glue.h  lcd.cpp  lcd.h  list_menu.cpp  list_menu.h  menu.cpp  menu.h  menu_main.cpp  menu_main.h  menu_set_alarm.cpp  menu_set_alarm.h  menu_set_time.cpp  menu_set_time.h  mtime.cpp  mtime.h  persistance.cpp  persistance.h  remote.h  rotaryenc.cpp  rotaryenc.h  sensors.cpp  sensors.h  set_alarm_menu.h  task.cpp  task.h  tmp
compress/: Cargo.toml  T.cmp
compress/src/: huffman.rs  lib.rs  main.rs  mytree.rs  text.rs
compress/src/huffman/: freq.rs  mod.rs  tree.rs
compress/tests/: huffman_test.rs
distrib/: CMakeLists.txt
distrib/basic/: main.cpp
graph/: plot.py
k8s-practise/: ReadMe.md  ingress.yaml  sqrt.yaml
k8s-practise/src/: main.rs
k8s-practise/src/mysqrt/: mod.rs
lab1/: tmalk001_lab1.cpp  whois1.txt  whois2.txt
lab3/: c  s  s1
lab4/: http_sender.py
lab4/part1/: tmalk001_lab4_part1.cpp
lab4/part2/: tmalk001_lab4_part2.cpp
lab4/part3/: tmalk001_lab4_part3.cpp
lab5/: Lab5-client-1.py  Lab5-server-1.py  RDT_reciever.py  UDP_server.py  check.py
lab6/: tmalk001_lab6.cpp
lab6/report/: msin.aux  msin.fdb_latexmk  msin.fls  msin.tex
lab7/: tmalk001_lab7.cpp
lab7/report/: msin.fdb_latexmk  msin.fls  msin.tex
lab8/: mytopo.py
project/: dhserver-1.py
queue_lib/: Cargo.toml  cbindgen.toml  queue_lib.h
queue_lib/src/: lib.rs
resume/: resume.out  resume.tex
src/: classifier.rs  evaluate.rs  feature.rs  lib.rs  main.rs  search.rs  sqrt_exapl.rs
src/graph_search/algorithms/: astar.rs  graph_algo_trait.rs  mod.rs  node_wrap.rs  uni_cost_search.rs
src/graph_search/problems/: mod.rs  npuzle.rs  problem_trait.rs
src/mysqrt/: mod.rs
src/problems/: graph_algo_trait.rs  mod.rs  node_wrap.rs  npuzle.rs  problem_trait.rs
src/problems/npuzzle/: mod.rs  np_node.rs  np_problem.rs
src/sqrt/: mod.rs
stack_lib/: Cargo.toml  cbindgen.toml
stack_lib/src/: atomic_stack.rs  lib.rs  mutex_stack.rs  stack.rs  verify.rs
threaded-expl/: bench_stack.cpp  multi_none.cpp  single.c  single_mutex.cpp
ucr-cs120b/: .gitignore
ucr-cs120b/cl_project/: tmalk001_alarm.cpp  tmalk001_alarm.h  tmalk001_alarm_sch.cpp  tmalk001_alarm_sch.h  tmalk001_cl_project.cpp  tmalk001_display.cpp  tmalk001_display.h  tmalk001_dsclock.cpp  tmalk001_dsclock.h  tmalk001_glue.cpp  tmalk001_glue.h  tmalk001_lcd.cpp  tmalk001_lcd.h  tmalk001_list_menu.cpp  tmalk001_list_menu.h  tmalk001_menu.cpp  tmalk001_menu.h  tmalk001_menu_main.cpp  tmalk001_menu_main.h  tmalk001_menu_set_alarm.cpp  tmalk001_menu_set_alarm.h  tmalk001_menu_set_time.cpp  tmalk001_menu_set_time.h  tmalk001_mtime.cpp  tmalk001_mtime.h  tmalk001_output.cpp  tmalk001_output.h  tmalk001_persistance.cpp  tmalk001_persistance.h  tmalk001_remote.h  tmalk001_remote_codes.h  tmalk001_rotaryenc.cpp  tmalk001_sensors.cpp  tmalk001_sensors.h  tmalk001_task.cpp  tmalk001_task.h
ucr-cs120b/lab2/part1/: tmalk001_lab2_part1.cpp
ucr-cs120b/lab2/part2/: tmalk001_lab2_part2.cpp
ucr-cs120b/lab2/part3/: tmalk001_lab2_part3.cpp
ucr-cs120b/lab3/part1/: tmalk001_lab3_part1.cpp
ucr-cs120b/lab3/part2/: tmalk001_lab3_part2.cpp
ucr-cs120b/lab3/part3/: tmalk001_lab3_part3.cpp
ucr-cs120b/lab4/part3/: tmalk001_lab4_part3.cpp
ucr-cs120b/lab5/part1/: tmalk001_lab5_part1.cpp
ucr-cs120b/lab5/part2/: tmalk001_lab5_part2.cpp
ucr-cs120b/lab5/pre-lab/: tmalk001_lab5_pre-lab.cpp
ucr-cs120b/lab6/: tmalk001_lab6.cpp
ucr-cs142/: ReadMe.md
ucr-cs142/atomic/: .gitmodules
ucr-cs142/atomic/graph/: plot.py  requirements.txt
ucr-cs142/atomic/report/: main.tex
ucr-cs142/atomic/stack_lib/src/: lib.rs  stack.rs  verify.rs
ucr-cs142/atomic/threaded-expl/: bench_stack.cpp
ucr-cs142/compress/: Cargo.toml  TEXT.cmpr  TEXT.txt
ucr-cs142/compress/data/table/: cmpr.tbl  cmpr.tbl.z
ucr-cs142/compress/src/huffman/: freq.rs
ucr-cs142/distrib/basic/: main.cpp
ucr-cs142/k8s-practise/: Dockerfile
ucr-cs164/lab1/: traceroute1.txt  traceroute2.txt
ucr-cs164/lab2/: lab2.txt  lab2.txt.save
ucr-cs164/lab3/: Lab3.docx  client.c  server.c
ucr-cs164/lab4/: http_sender.py  live_server.py  multiple_connection.py  my_server.py  server.py
ucr-cs164/lab5/: Lab5-server-1.py  RDT3.py  RDT3_chunked.py  RDT_sender.py  UDP_client.py  UDP_socket.py  server.py
ucr-cs164/lab6/report/: msin.aux  msin.fdb_latexmk
ucr-cs164/lab7/report/: msin.aux  msin.fdb_latexmk  msin.tex
ucr-cs170/prj1/: trace.txt
ucr-cs170/prj1/src/: main.rs
ucr-cs170/prj1/src/problems/: problem_trait.rs
ucr-cs170/prj2/: CS170_Spring_2023_Small_data__53.txt  Cargo.toml  Readme.md
ucr-cs170/prj2/src/: classifier.rs  evaluate.rs  instance.rs  lib.rs  main.rs  search.rs
(+2 files in other folders)
