[package]
name = "sqrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.32.0"
axum = "0.6.20"
rdkafka = { version = "0.34", features = ["cmake-build"] }
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = "0.7.2"
plotters = "0.3.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
lto = true