[package]
name = "sqrt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
axum = "0.6.20"
#rdkafka = { version = "0.34", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0.107", features = [] }
sqlx = { version = "0.7.2" , features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-rustls"]}
uuid = { version = "1.4", features = ["v4", "serde"]}
chrono = { version = "0.4", features = ["serde"] }
plotters = "0.3.3"

[profile.release]
lto = true

[[bin]]
name = "sqrt-bin"
path = "src/sqrt_exapl.rs"

[[bin]]
name = "empty-app"
path = "src/dummy.rs"

