[package]
name = "compress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weezl = "0.1.7"
itertools = "0.12.0"
bitvec = "1.0.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"]}
zopfli = "0.8.0"
inflate = "0.4.5"
ciborium = "0.2.1"