[package]
name = "prj2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
itertools = "0.10.5"
clap = { version = "4.3.2", features = ["cargo"] }

[features]
cargo = ["clap/cargo"]

[lib]
name = "prj2_lib"
path = "src/lib.rs"


[[bin]]
name = "prj2"
path = "src/main.rs" 